@@ -57,9 +57,7 @@ class LikTests(unittest.TestCase):
         self.assertTrue(dlZhyp.shape == (n,D))
 
 
-    def test_likGauss(self):
-        print "testing Gaussian likelihood..."
-        likelihood = pyGPs.lik.Gauss() 
+    def checkLikelihood(self, likelihood):
         print "predictive mode"
         lp, ymu, ys2 = likelihood.proceed(y=self.y, mu=self.mu, s2=self.s2, nargout=3)
         self.checkPrediction(lp, ymu, ys2)
@@ -77,45 +75,26 @@ class LikTests(unittest.TestCase):
         for der in xrange(len(likelihood.hyp)):
             dlZhyp = likelihood.proceed(y=self.y, mu=self.mu, s2=self.s2, inffunc=pyGPs.inf.EP(), der=der, nargout=3)
             self.checkDerivativeEP(dlZhyp)
+
+
+    def test_likGauss(self):
+        print "testing Gaussian likelihood..."
+        likelihood = pyGPs.lik.Gauss()
+        self.checkLikelihood(likelihood)
+
 
 
     def test_likErf(self):
         print "testing error function(cumulative Gaussian) likelihood..."
         likelihood = pyGPs.lik.Erf() 
-        print "predictive mode"
-        lp, ymu, ys2 = likelihood.proceed(y=self.y, mu=self.mu, s2=self.s2, nargout=3)
-        self.checkPrediction(lp, ymu, ys2)
-
-        print "inference mode(Laplace inference)"
-        lp,dlp,d2lp,d3lp = likelihood.proceed(y=self.y, mu=self.mu, s2=self.s2, inffunc=pyGPs.inf.Laplace(), nargout=4)
-        self.checkInferenceLaplace(lp,dlp,d2lp,d3lp)
-        for der in xrange(len(likelihood.hyp)):
-            lp_dhyp,dlp_dhyp,d2lp_dhyp = likelihood.proceed(y=self.y, mu=self.mu, s2=self.s2, inffunc=pyGPs.inf.Laplace(), der=der, nargout=4)
-            self.checkDerivativeLaplace(lp_dhyp,dlp_dhyp,d2lp_dhyp)
-
-        print "inference mode(EP inference)"
-        lp,dlp,d2lp = likelihood.proceed(y=self.y, mu=self.mu, s2=self.s2, inffunc=pyGPs.inf.EP(), nargout=3)
-        self.checkInferenceEP(lp,dlp,d2lp)
-        for der in xrange(len(likelihood.hyp)):
-            dlZhyp = likelihood.proceed(y=self.y, mu=self.mu, s2=self.s2, inffunc=pyGPs.inf.EP(), der=der, nargout=3)
-            self.checkDerivativeEP(dlZhyp)
+        self.checkLikelihood(likelihood)
 
 
     def test_likLaplace(self):
         print "testing Laplacian likelihood..."
         likelihood = pyGPs.lik.Laplace() 
-        print "predictive mode"
-        lp, ymu, ys2 = likelihood.proceed(y=self.y, mu=self.mu, s2=self.s2, nargout=3)
-        self.checkPrediction(lp, ymu, ys2)
+        self.checkLikelihood(likelihood)
 
-        print "inference mode(Laplace inference)"
-        lp,dlp,d2lp,d3lp = likelihood.proceed(y=self.y, mu=self.mu, s2=self.s2, inffunc=pyGPs.inf.Laplace(), nargout=4)
-        self.checkInferenceLaplace(lp,dlp,d2lp,d3lp)
-        # no derivatibes in Laplacian likelihood
-
-        print "inference mode(EP inference)"
-        lp,dlp,d2lp = likelihood.proceed(y=self.y, mu=self.mu, s2=self.s2, inffunc=pyGPs.inf.EP(), nargout=3)
-        self.checkInferenceEP(lp,dlp,d2lp)
 
 
 
